Fixed buttons visibility. Now they are always fully visible

--- a/src/components/cookiesNotice.css
+++ b/src/components/cookiesNotice.css
@@ -4,7 +4,6 @@
   background-color: rgba(47, 46, 46, 0.65);
   border-radius: 3vmin;
   width: 59vmin;
-  height: 35vmin;
   border: 0.3vmin solid rgb(180, 185, 196);
   border-bottom-left-radius: 30%;
   border-bottom-right-radius: 30%;
@@ -13,6 +12,7 @@
   display: inline-block;
   z-index: 5;
   transition: opacity 0.9s;
+  padding-bottom: 1.5vmin;
 }
 .cookies-notice-container-visible {
   opacity: 1;
@@ -33,18 +33,18 @@
   border: 0.3vmin solid rgb(180, 185, 196, 0.5);
   border-radius: 3vmin;
   border-top-right-radius: 1.3vmin;
+  max-height: 26vmin;
 }
 
 .cookies-notice-decline-button,
 .cookies-notice-accept-button {
   font-size: 4vmin;
-  padding-bottom: 0.45vmin;
   text-align: center;
   background-color: #7f7f7f95;
   color: rgb(180, 185, 196);
   float: left;
   width: 40%;
-  margin-left: 9.7%;
+  margin-left: 5.5vmin;
   border: 0.07vmin solid aliceblue;
   border-bottom-left-radius: 69%;
   transition-property: background-color, color;
@@ -54,7 +54,7 @@
 .cookies-notice-decline-button {
   float: right;
   margin-left: 0;
-  margin-right: 9.6%;
+  margin-right: 5.5vmin;
   border-bottom-left-radius: 0vmin;
   border-bottom-right-radius: 69%;
 }
@@ -63,4 +63,7 @@
 .cookies-notice-accept-button:hover {
   color: green;
   background-color: #7f7f7ff5;
+}
+.cookies-notice-buttons-container {
+  display: flex;
 }
